# jtag-adi

./: Cargo.toml
examples/: armv8-halt.rs  armv8-single-step-pcsr.rs  armv8-single-step.rs  parse-rom-table.rs  peekpoke.rs
src/: armv8.rs  lib.rs
