[package]
name = "jtag-adi"
version = "0.2.0"
edition = "2021"
description = "Library for interacting with ARM Debug Interface components"
license = "MIT"
repository = "https://github.com/srwalter/jtag-adi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jtag-taps = "0.4"
